# bootdev-python-track

./: .gitignore  README.md  pyproject.toml
src/ch01_introduction/l11_lesson_failure/: main.py
src/ch02_variables/l02_variables_vary/: main.py
src/ch02_variables/l04_negative_numbers/: main.py
src/ch02_variables/l09_fstring_in_python/: main.py
src/ch02_variables/l10_nonetype_variables/: main.py
src/ch02_variables/l14_math_with_strings/: main.py
src/ch02_variables/l17_boots/: main.py
src/ch02_variables/l19_character_report/: main.py
src/ch03_functions/l01_functions/: main.py
src/ch03_functions/l06_where_to_declare_functions/: main.py
src/ch03_functions/l09_community/: main.py
src/ch06_computing/l07_scientific_notation/: main.py
src/ch06_computing/l13_bitwise_and_operator/: main.py
src/ch06_computing/l14_bitwise_or_operator/: main.py
src/ch07_comparisons/l04_statements/: main.py
src/ch07_comparisons/l05_if_practice/: main.py
src/ch07_comparisons/l06_if_else/: main.py
src/ch07_comparisons/l07_if_else_practice/: main.py
src/ch07_comparisons/l08_if_else_practice/: main.py
src/ch07_comparisons/l09_boolean_logic/: main.py
src/ch07_comparisons/l11_should_serve_drinks/: main.py
src/ch07_comparisons/l13_combat_advantage/: main.py
src/ch2_variables/l18_spellbook/: main.py
src/ch3_functions/l11_solutions/: main.py
src/ch3_functions/l14_multiple_return_values/: main.py
src/ch3_functions/l17_default_values/: main.py
src/ch3_functions/l18_curse/: main.py
src/ch3_functions/l19_enchant_and_attack/: main.py
(+34 files in other folders)
