name = "bootdev-python"
version = "0.1.0"
description = "My local setup for boot.dev Python lessons."

# --- Dependencies ---
dependencies = []

# --- Dev tools ---
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff"
]

# --- Tool configurations ---

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100